2012-01-05 Roman
- SYS:confugure.in: Use buildin variables for macros AC_CHECK_HEADERS and AC_ARG_ENABLE.
- SYS: Option --CoreDumpAllow is added for core dump creation on crash enable. Function TSYS::sysSleep() is some fixed.
- SYS: To all start scripts added procedure for automatic core dump files process by backtrace call and put it result to
    text files. The procedure wait core file "core" into work directory then
    set Linux kernel core pattern variable (kernel.core_pattern) to "core" value.


2012-01-04 Roman
- !!!!:SYS: Build adaptation to uClibc is added.
    Build start from version 0.9.32 which have support real time functions like clock_nanosleep().
    Some other work made for it:
	- Check and disable using Iconv and Intl (I18N) API is added.
	- Automatic detect and enable configure option --enable-CrossCompile is added for cross-compile environments.
	- Configure option --enable-CoreLibStatic is added for shared OpenSCADA library build separate disable and 
	    call-start programm static linking.
	- Module DAQ.ICP_DAS is configured by default to disabled, for prevent build try for onapt ARM environment.
	- Results table is added at configuration end.
	- Function usleep() is replaced everywhere to self function-wraper TSYS::sysSleep() by reason function usleep()
	    miss into uCLibc and allow only by special uClibc configure on build. Into TSYS::sysSleep() used nanosleep().
	- Function pthread_yield() is replaced to sched_yield().


2011-12-30 Roman
- FIX:SYS:User's API function TArrayObj::splice() is some fixed for limits.


2011-12-29 Roman
- FIX:SYS:User's API function TArrayObj::slice() is fixed from more bugs.
- FIX:DAQ.JavaLikeCalc: User's API function string.slice() is fixed for begin position outrage check.


2011-12-27 Roman
- UI.QTStarter: Start QT UI-modules dialog last close is made OpenSCADA full stop.
    Used for correct OpenSCADA stop at exit by DE dialog (KDE, Gnome and other).


2011-12-21 Roman