@@ -24,6 +24,22 @@
 
 extern "C"
 {
+#ifdef MOD_DAQ_ModBus_INCL
+    TModule::SAt daq_ModBus_module( int nMod )
+    {
+	if(nMod == 0)		return TModule::SAt(PRT_ID,PRT_TYPE,PRT_SUBVER);
+	else if(nMod == 1)	return TModule::SAt(DAQ_ID,DAQ_TYPE,DAQ_SUBVER);
+
+	return TModule::SAt("");
+    }
+
+    TModule *daq_ModBus_attach( const TModule::SAt &AtMod, const string &source )
+    {
+	if(AtMod == TModule::SAt(DAQ_ID,DAQ_TYPE,DAQ_SUBVER))		return new ModBus::TTpContr( source );
+	else if(AtMod == TModule::SAt(PRT_ID,PRT_TYPE,PRT_SUBVER))	return new ModBus::TProt( source );
+	return NULL;
+    }
+#else
     TModule::SAt module( int nMod )
     {
 	if(nMod == 0)		return TModule::SAt(PRT_ID,PRT_TYPE,PRT_SUBVER);
@@ -38,4 +54,5 @@ extern "C"
 	else if(AtMod == TModule::SAt(PRT_ID,PRT_TYPE,PRT_SUBVER))	return new ModBus::TProt( source );
 	return NULL;
     }
+#endif
 }
